fix: use dropdown menu for site links on small screen

--- a/assets/main.css
+++ b/assets/main.css
@@ -109,6 +109,8 @@ a {
   list-style: none;
   padding: 0;
   margin: 0;
+  position: static;
+  color: var(--aomori-primary-color-hex);
 }
 .site-links a {
   transition: color 0.2s linear;
@@ -116,12 +118,12 @@ a {
 .site-nav {
   flex-grow: 1;
 }
-.site-nav a {
-  display: block;
+.site-links a {
   color: var(--aomori-primary-color-hex);
+  transition: color linear 0.1s;
 }
-.site-nav a:hover,
-.site-nav a:active {
+.site-links a:hover,
+.site-links a:active {
   color: var(--primary-color-hex);
 }
 .site-nav a:active::before,
@@ -130,32 +132,64 @@ a {
   display: inline;
   margin-right: 0.5em;
 }
-.site-nav li + li {
+.site-nav_button,
+.site-nav_close {
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+.site-nav button svg {
+  width: 16px;
+  height: 16px;
+  fill: currentColor;
+  stroke: currentColor;
+  pointer-events: none;
+  user-select: none;
+}
+.site-nav_list {
+  position: relative;
+}
+.site-nav_dropdown {
+  display: block;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.site-nav_dropdown li + li {
   margin-top: min(45px, 4vh);
 }
-.site-links > div:not(.site-nav) {
-  color: var(--primary-color-hex);
+.site-nav_mask,
+.site-nav_close {
+  display: none;
 }
-.site-links > div:not(.site-nav) a:hover,
-.site-link > div:not(.site-nav) a:active,
-.js-subscribe:hover,
-.js-subscribe:active {
+.site-links button {
+  border: 1px solid currentColor;
+  background: none;
   color: var(--aomori-primary-color-hex);
+  border-radius: 3px;
+  padding: 0.5em;
+  cursor: pointer;
+  transition: color linear 0.1s, background linear 0.1s;
+}
+.site-links button:hover,
+.site-links button:active {
+  color: var(--primary-color-hex);
+  background-color: rgba(var(--primary-color-rgb), 0.1);
 }
 .site-podcast ul {
   display: flex;
+}
+.site-podcast .icon,
+.js-search,
+.site-social .icon {
+  padding: 0.5em;
 }
 .site-podcast li + li,
 .site-social a + a {
   margin-left: 1.5em;
 }
-.js-subscribe {
-  border: 1px solid currentColor;
-  background-color: transparent;
-  color: currentColor;
+.site-subscribe .js-subscribe {
   padding: 0.5em 1em;
-  border-radius: 3px;
-  cursor: pointer;
 }
 .scroll-indicator {
   position: absolute;
@@ -420,11 +454,6 @@ a {
   .landing {
     flex-flow: row nowrap;
   }
-  .site-nav {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-  }
   .side-mark {
     position: static;
     right: auto;
@@ -537,6 +566,39 @@ a {
   }
   .subject-description {
     font-size: 1em;
+  }
+  .site-nav {
+    flex-grow: 0;
+  }
+  .site-nav_button,
+  ._open .site-nav_close {
+    display: inline-flex;
+  }
+  .site-nav_dropdown {
+    display: none;
+  }
+  ._open .site-nav_dropdown {
+    display: block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0.5em;
+    bottom: auto;
+    padding: 1em;
+    border-radius: 3px;
+    z-index: 2;
+  }
+  ._open .site-nav_mask {
+    width: 100vw;
+    height: var(--aomori-full-height);
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: var(--aomori-light-hex);
+    z-index: 1;
+    display: block;
+    padding: var(--aomori-padding-md) var(--aomori-padding-sm) var(--aomori-padding-sm);
+    box-sizing: border-box;
   }
   .hero {
     padding: 0;
